# ya-zksync-prover

./: .dockerignore  .env-template  .env-zksync-template  .gitignore  Cargo.toml  docker-compose.yml  readme.md  zcli
benchmark/: transfer.sh  verify.sh
docker/: build-dockers.sh  run-docker-prover.sh  run-zksync-server.sh
docker/geth/: Dockerfile  standard-dev.json
docker/prover/: Dockerfile  download-keys.sh  ya-entry.sh
docker/prover-wo-entry/: Dockerfile
src/: main.rs  prover_runner.rs  transfer.rs  zksync_client.rs
workdir/: .env
workdir/blocks/: block-29.json  job-info-97.json
yagna-prover/: Cargo.toml
yagna-prover/src/: client.rs  main.rs
