[package]
name = "ya-zksync-node"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "yagna-prover"
]

[dependencies]
ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "e68bbd90c903c6f74f77fddb80a432d20e4e2b2a"}
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "e68bbd90c903c6f74f77fddb80a432d20e4e2b2a"}

yarapi = { git = "https://github.com/golemfactory/yarapi", branch = "messaging-through-streaming" }
#yarapi = { path = "../../Golem/yarapi", branch = "event-api-compatibility" }

zksync = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_prover = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_crypto = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_prover_utils = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
backoff = "0.1.6"
bigdecimal = "0.1.0"
chrono = "0.4.10"
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
indicatif = "0.15.0"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
secp256k1 = "0.17"
semver = "0.10.0"
serde = "1.0.117"
serde_json = "1.0"
sha3 = "0.9.1"
structopt = "0.3"
tempfile = "3.1.0"
tokio = { version = "0.2.10", features = ["fs"] }
url = "2.1.1"
