[package]
name = "ya-zksync-node"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "yagna-prover"
]

[dependencies]
ya-client = "0.5"
ya-client-model = "0.3"
ya-agreement-utils = "0.2"
gftp = "0.1"

yarapi = "0.3"

zksync = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_prover = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_crypto = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_prover_utils = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
backoff = "0.1.6"
bigdecimal = "0.1.0"
chrono = "0.4.10"
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
indicatif = "0.15.0"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
secp256k1 = "0.17"
semver = "0.10.0"
serde = "1.0.117"
serde_json = "1.0"
sha3 = "0.9.1"
structopt = "0.3"
tempfile = "3.1.0"
tokio = { version = "0.2.10", features = ["fs"] }
url = "2.1.1"

[patch.crates-io]
yarapi = { git = "https://github.com/golemfactory/yarapi", branch = "event-api-compatibility-patch" }
ya-client = { git = "https://github.com/golemfactory/ya-client.git", branch = "release/v0.5"}
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", branch = "release/v0.5"}
#gftp = { git = "https://github.com/golemfactory/yagna.git", branch = "release/v0.6.0"}
#ya-agreement-utils = { git = "https://github.com/golemfactory/yagna.git", branch = "release/v0.6.0"}
#ya-compile-time-utils = { git = "https://github.com/golemfactory/yagna.git", branch = "release/v0.6.0"}
gftp = { git = "https://github.com/golemfactory/yagna.git", branch = "2rec/bump-crates-ver"}
ya-agreement-utils = { git = "https://github.com/golemfactory/yagna.git", branch = "2rec/bump-crates-ver"}
ya-compile-time-utils = { git = "https://github.com/golemfactory/yagna.git", branch = "2rec/bump-crates-ver"}
ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "6b494e17d7a662e0b710af8c5a2e99ab4007fdb9"}
ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "6b494e17d7a662e0b710af8c5a2e99ab4007fdb9"}
#ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "6b494e17d7a662e0b710af8c5a2e99ab4007fdb9"}
ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "6b494e17d7a662e0b710af8c5a2e99ab4007fdb9"}
