[package]
name = "yagna-prover"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backoff = "0.1.6"
env_logger = "0.6"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.90"
serde_json = "1.0.0"
structopt = "0.3.20"

zksync_prover = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_state = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_types = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_circuit = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_crypto = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_config = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_utils = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
zksync_prover_utils = { git = "https://github.com/nieznanysprawiciel/zksync", branch = "yagna-prover/prototype" }
